# maze_project

./: Design.md  Maze_Generator_and_Solver.opam  README.md  dune  dune-project  package-lock.json  package.json
_coverage/: index.html
_coverage/src/: cell.ml.html  maze.ml.html  maze_generator.ml.html  maze_solver.ml.html  utils.ml.html
demo/Dream/: command.txt  dune  hello.ml  hello.opam
demo/Rescript/: command.txt
frontend/: bsconfig.json  package-lock.json  package.json  rescript.json
frontend/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
frontend/lib/bs/src/: maze.ast  maze.cmt
frontend/src/: maze.res
server/: dune  main.ml  print_maze.ml  server.ml
src/: cell.ml  cell.mli  dune  main.ml  maze.ml  maze.mli  maze_generator.ml  maze_generator.mli  maze_solver.ml  maze_solver.mli  server.ml  utils.ml  utils.mli
src/utils/: ml
test/: cell_test.ml  dune  maze_generator_test.ml  maze_solver_test.ml  maze_test.ml  utils_test.ml
