(lang dune 3.16)
(generate_opam_files true)
(authors "Jingwei Li" "Yifan Hao")
(maintainers "jli448@jh.edu")
(package
 (name Maze_Generator_and_Solver) ; put in your own project name here
 (allow_empty)
 (synopsis "An OCaml library for Helpful Helloing")
 (description "It allows users to choose different algorithms to generate the maze and choose algorithms to solve the maze.")
 (depends
  (ounit2 (>= 2.2.7)) ; for each opam dependency list the version
  (core (>= 0.17.1)) ; `opam list core` will display which version of core you have
))