(library
 (name main)
 (modules main)
 (libraries core maze_generator maze_solver maze utils cell)
  (preprocess (pps ppx_jane bisect_ppx))
)


(executable
 (name server)
 (modules server)
 (libraries dream core main maze_generator maze_solver maze utils cell)
  (preprocess (pps ppx_jane bisect_ppx))
)