(library
 (name main)
 (modules main)
 (libraries core maze_generator maze_solver maze utils cell)
  (preprocess (pps ppx_jane bisect_ppx))
)


(executable
  (name print_maze)
  (modules print_maze)
  (libraries cell core maze maze_generator maze_solver utils)
  (preprocess (pps ppx_jane lwt_ppx))
)
