
(library
 (name cell)
 (public_name cell)
 (modules Cell))


(library
 (name maze)
 (modules maze)
 (libraries core cell)
 )

 (library
 (name utils)
 (modules utils)
 (libraries core maze)
)

(library
 (name maze_solver)
 (modules maze_solver)
 (libraries maze utils core)
)

(library
 (name maze_generator)
 (modules maze_generator)
 (libraries maze utils core)
)

(library
 (name main)
 (modules main)
 (libraries core maze_generator maze_solver maze utils)
)


(executable
 (name server)
 (modules server)
 (libraries dream core main maze_generator maze_solver maze utils)
)