
(library
 (name cell)
 (modules cell)
 (libraries core)
  (preprocess (pps ppx_jane))
 )


(library
 (name maze)
 (modules maze)
 (libraries core cell)
 (preprocess (pps ppx_jane bisect_ppx))
 )

 (library
 (name utils)
 (modules utils)
 (libraries core maze cell)
  (preprocess (pps ppx_jane bisect_ppx))
)

(library
 (name maze_solver)
 (modules maze_solver)
 (libraries core maze utils cell)
  (preprocess (pps ppx_jane bisect_ppx))
)

(library
 (name maze_generator)
 (modules maze_generator)
 (libraries maze utils core cell)
  (preprocess (pps ppx_jane bisect_ppx))
)