(library
  (name cell_test)
  (modules cell_test)
  (libraries
    ounit2
    core
    cell))

; Test library for Maze module
(library
  (name maze_test)
  (modules maze_test)
  (libraries
    ounit2
    core
    maze))

; Test library for Maze Generator module
(library
  (name maze_generator_test)
  (modules maze_generator_test)
  (libraries
    ounit2
    core
    maze
    maze_generator
    utils))

; Test library for Maze Solver module
(library
  (name maze_solver_test)
  (modules maze_solver_test)
  (libraries
    ounit2
    core
    maze
    maze_solver
    utils))

; Test library for Utils module
(library
  (name utils_test)
  (modules utils_test)
  (libraries
    ounit2
    core
    utils))

