(test
  (name cell_test)
  (modules cell_test)
  (libraries
    ounit2
    core
    cell))

; Test library for Maze module
(test
  (name maze_test)
  (modules maze_test)
  (libraries
    ounit2
    core
    maze))

; Test library for Maze Generator module
(test
  (name maze_generator_test)
  (modules maze_generator_test)
  (libraries
    ounit2
    core
    maze
    maze_generator
    utils))

; Test library for Maze Solver module
(test
  (name maze_solver_test)
  (modules maze_solver_test)
  (libraries
    ounit2
    core
    maze
    maze_solver
    utils))

; Test library for Utils module
(test
  (name utils_test)
  (modules utils_test)
  (libraries
    ounit2
    core
    utils))

